@@ -1,4 +1,6 @@
 20100208 (T.S.)
+ - src/padProtoHost.c: Use PADREQ_BCST macro instead of hardcoding -128.
+20100208 (T.S.)
  - src/padProto.c: let padProtoHandler() ignore requests with
    a command array too small to hold data for the active ('this')
    channel.
